# workflow_tests

./: CHANGELOG.md  build_deb.sh  pyproject.toml  test.txt
.github/workflows/: build_spyglass.yaml  release.yml  spyglass.yml  test.yml  update_packages.yml
pool/bookworm/generic/: mainsail-ustreamer_6.40.bookworm_amd64.deb  mainsail-ustreamer_6.40.bookworm_arm64.deb
pool/bookworm/rpi/: mainsail-ustreamer_6.40.bookworm_armhf.deb
pool/bullseye/generic/: mainsail-ustreamer_6.40.bullseye_amd64.deb  mainsail-ustreamer_6.40.bullseye_arm64.deb
pool/bullseye/rpi/: mainsail-ustreamer_6.40.bullseye_armhf.deb
pool/trixie/generic/: mainsail-ustreamer_6.40.trixie_amd64.deb  mainsail-ustreamer_6.40.trixie_arm64.deb
pool/trixie/rpi/: mainsail-ustreamer_6.40.trixie_armhf.deb
scripts/: build_deb.sh
